[gd_scene load_steps=6 format=3 uid="uid://c1npg3y2y1ad6"]

[ext_resource type="Theme" uid="uid://da2ym3jqvm0nv" path="res://Themes/gflat.tres" id="1_dxxiu"]
[ext_resource type="Script" uid="uid://0se5hjv08vev" path="res://Scripts/screen_settings.gd" id="1_mmbnq"]
[ext_resource type="PackedScene" uid="uid://bmt4wtrc1jkls" path="res://Scenes/ui_bar_top.tscn" id="2_dxxiu"]
[ext_resource type="PackedScene" uid="uid://bylp853n15o5o" path="res://Scenes/item_color_square.tscn" id="4_dkwp2"]
[ext_resource type="PackedScene" uid="uid://dft73fna67f8x" path="res://Scenes/item_color_list.tscn" id="5_p6ux1"]

[node name="ControlScreenSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_dxxiu")
script = ExtResource("1_mmbnq")

[node name="BarTop" parent="." instance=ExtResource("2_dxxiu")]
layout_mode = 1
Title = "Settings"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 400.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 23
columns = 2

[node name="DisplayLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Display"

[node name="DisplayOptions" type="OptionButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Window"
popup/item_0/id = 0
popup/item_1/text = "Full Screen"
popup/item_1/id = 1

[node name="AudioLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Audio"

[node name="AudioCheck" type="CheckButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Enabled?"
flat = true

[node name="GameLengthLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Level Seed"

[node name="LineEditSeed" type="LineEdit" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "0"
emoji_menu_enabled = false
clear_button_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ColorSquareP1" parent="CenterContainer/GridContainer/HBoxContainer" instance=ExtResource("4_dkwp2")]
layout_mode = 2
Selectable = false
Selected = false
Swatch_Color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="LabelColorP1" type="Label" parent="CenterContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "Balloon Color"

[node name="ItemColorListP1" parent="CenterContainer/GridContainer" instance=ExtResource("5_p6ux1")]
layout_mode = 2
Swatch_Colors = Array[Color]([Color(0, 0, 0, 1), Color(0.5, 0.5, 0.5, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(0, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 0, 1), Color(1, 0, 0, 1), Color(1, 0, 1, 1)])
Selected_Color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="Label" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Key Bindings"

[node name="ButtonKBConfigure" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Configure"

[connection signal="item_selected" from="CenterContainer/GridContainer/DisplayOptions" to="." method="_on_display_options_item_selected"]
[connection signal="toggled" from="CenterContainer/GridContainer/AudioCheck" to="." method="_on_audio_check_toggled"]
[connection signal="text_changed" from="CenterContainer/GridContainer/LineEditSeed" to="." method="_on_line_edit_seed_text_changed"]
[connection signal="On_Color_Selected" from="CenterContainer/GridContainer/ItemColorListP1" to="." method="_on_item_color_list_p_1_on_color_selected"]
[connection signal="pressed" from="CenterContainer/GridContainer/ButtonKBConfigure" to="." method="_on_button_kb_configure_pressed"]
